--- a/index.html
+++ b/index.html
@@ -4,8 +4,116 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W컨셉</title>
+    <link rel="stylesheet" href="./resst.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    
+    <main>
+        <section class="top">
+            <h1>지금 20대가 주목해야 할 브랜드</h1>
+            <div class="brand">
+                <aside class="left">
+                    <img src="./images/favorite.png" alt="찜하기" class="favorite001">
+                </aside>
+                <div class="right">
+                    <div class="name">
+                        <h2>20대 소녀의 감성을 담아</h2>
+                        <p>히어리 | ~30%</p>
+                    </div>
+                    <div class="bottom">
+                        <a href="#" class="product">
+                            <img src="./images/0002.jpg" alt="#">
+                            <div class="company">
+                                <p>히어리</p>
+                                <img src="./images/favorite002.png" alt="구독하기">
+                            </div>
+                            <h3>Aurora Shirring Duffle Bag_Black</h3>
+                            <p><em>24%</em>73,576</p>
+                        </a>
+                        <a href="#" class="product">
+                            <img src="./images/0003.jpg" alt="#">
+                            <div class="company">
+                                <p>히어리</p>
+                                <img src="./images/favorite002.png" alt="구독하기">
+                            </div>
+                            <h3>Aurora Shirring Duffle Bag_Lilac</h3>
+                            <p><em>24%</em>73,576</p>
+                        </a>
+                        <a href="#" class="product">
+                            <img src="./images/0004.jpg" alt="#">
+                            <div class="company">
+                                <p>히어리</p>
+                                <img src="./images/favorite002.png" alt="구독하기">
+                            </div>
+                            <h3>Aurora Shirring Duffle Bag_Dot</h3>
+                            <p><em>24%</em>73,576</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="product_wrap">
+            <div class="product_top">
+                <h1>소녀소녀한 고객님 취향에 맞는 상품 추천</h1>
+                <a href="#">더보기</a>
+            </div>
+            <div class="product_bottom">
+                <a href="#" class="product">
+                    <img src="./images/0005.jpg" alt="#">
+                    <div class="company">
+                        <p>비바셔스</p>
+                        <img src="./images/favorite002.png" alt="구독하기">
+                    </div>
+                    <h3>Cencel See-Through Classic Shirt - 3COL</h3>
+                    <p><em>39%</em>31,232</p>
+                </a>
+                <a href="#" class="product">
+                    <img src="./images/0006.jpg" alt="#">
+                    <div class="company">
+                        <p>레테라</p>
+                        <img src="./images/favorite002.png" alt="구독하기">
+                    </div>
+                    <h3>[단독][NEW 컬러추가] Basic Round Linen Cardigan</h3>
+                    <p><em>29%</em>48,926</p>
+                </a>
+                <a href="#" class="product">
+                    <img src="./images/0007.jpg" alt="#">
+                    <div class="company">
+                        <p>룩캐스트</p>
+                        <img src="./images/favorite002.png" alt="구독하기">
+                    </div>
+                    <h3>[단독]엠마 린넨 스트랩 자켓 / EMMA LINEN STRAP JACKET_3colors</h3>
+                    <p><em>34%</em>110,715</p>
+                </a>
+                <a href="#" class="product">
+                    <img src="./images/0008.jpg" alt="#">
+                    <div class="company">
+                        <p>우포스</p>
+                        <img src="./images/favorite002.png" alt="구독하기">
+                    </div>
+                    <h3>OORIGINAL BLACK - 조리 블랙</h3>
+                    <p>69,000</p>
+                </a>
+                <a href="#" class="product">
+                    <img src="./images/0009.jpg" alt="#">
+                    <div class="company">
+                        <p>메무아</p>
+                        <img src="./images/favorite002.png" alt="구독하기">
+                    </div>
+                    <h3>쇼콜라웨이브 미디스커트</h3>
+                    <p><em>41%</em>39,124</p>
+                </a>
+                <a href="#" class="product">
+                    <img src="./images/0010.jpg" alt="#">
+                    <div class="company">
+                        <p>아디다스</p>
+                        <img src="./images/favorite002.png" alt="구독하기">
+                    </div>
+                    <h3>TOKYO W - JI0183</h3>
+                    <p>139,000</p>
+                </a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
